[project]
name = "sleep-until"
version = "1.0.0"
description = "Sleep until a specific wall-clock time"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
[project.scripts]
sleep_until = "sleep_until:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
